<resources>
    <string name="app_name">Buckneer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="profession">Profession</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="please_enter_email_and_password">Please enter email and password</string>
    <string name="profile">Profile</string>
</resources>
