<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.miftarisimel.buckneer.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.miftarisimel.buckneer.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_titleFragment"
            app:destination="@id/titleFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.miftarisimel.buckneer.ui.profile.ProfileFragment"
        tools:layout="@layout/fragment_profile"
        android:label="@string/profile"/>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.miftarisimel.buckneer.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.miftarisimel.buckneer.ui.login.LoginFragment"
        tools:layout="@layout/fragment_login"
        android:label="LoginFragment" >
        <action
            android:id="@+id/action_loginFragment_to_personalFragment"
            app:destination="@id/register_nested"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/AddProjectFragment"
        tools:layout="@layout/fragment_add_project"
        android:name="com.miftarisimel.buckneer.ui.addproject.AddProjectFragment"
        android:label="AddProject" >
        <argument
            android:name="projectTitle"
            app:argType="string" />
    </fragment>
    <navigation
        android:id="@+id/register_nested"
        android:label="Register"
        app:startDestination="@id/personalFragment">
        <fragment
            android:id="@+id/personalFragment"
            android:name="com.miftarisimel.buckneer.ui.signup.PersonalFragment"
            android:label="PersonalFragment"
            tools:layout="@layout/fragment_personal">
            <action
                android:id="@+id/action_personalFragment_to_accountFragment"
                app:destination="@id/accountFragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim" />

        </fragment>
        <fragment
            android:id="@+id/accountFragment"
            android:name="com.miftarisimel.buckneer.ui.signup.AccountFragment"
            android:label="AccountFragment"
            tools:layout="@layout/fragment_account">

            <argument
                android:name="fullName"
                app:argType="string" />
            <argument
                android:name="profession"
                app:argType="string" />
            <argument
                android:name="mobileNumber"
                app:argType="string" />

        </fragment>
    </navigation>
    <fragment
        android:id="@+id/titleFragment"
        android:name="com.miftarisimel.buckneer.ui.addproject.TitleFragment"
        tools:layout="@layout/fragment_title"
        android:label="TitleFragment" >
        <action
            android:id="@+id/action_titleFragment_to_AddProjectFragment"
            app:destination="@id/AddProjectFragment" />
    </fragment>
</navigation>